Personalize website with images and text

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,11 +8,19 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
+      <h1>Jacinda's Portfolio</h1>
+      <p>Welcome to my portfolio.</p>
+      <p>Hi everyone! My full name is Jacinda Ryzel Soto. Right now you are visiting
+        my portfolio page which is kinda cool. I like to code (if that wasn't obvious), read,
+        listen to music, paint, and more!</p>
+      <p>Here is a funny picture of me.</p>
+      <img src = "/images/patrick.gif" />
+      <p>Just kidding! Here is another picture of Patrick.</p>
+      <img src = "/images/200.gif" />
+      <p>Click <a href="https://www.linkedin.com/in/jacindasoto/">here</a> to visit my LinkedIn</p>
+      <p>Click below to get random fun facts about me.</p>
+      <button onclick="addRandomGreeting()"> ☺️</button>
+      <img src = "/images/tenor.gif" />
       <div id="greeting-container"></div>
     </div>
   </body>
