Add personal photo link and adjusted position of gif

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <div id="content">
       <h1>Jacinda's Portfolio</h1>
       <p>Welcome to my portfolio.</p>
+      <img src = "/images/tenor.gif" />
       <p>Hi everyone! My full name is Jacinda Ryzel Soto. Right now you are visiting
         my portfolio page which is kinda cool. I like to code (if that wasn't obvious), read,
         listen to music, paint, and more!</p>
@@ -18,9 +19,10 @@
       <p>Just kidding! Here is another picture of Patrick.</p>
       <img src = "/images/200.gif" />
       <p>Click <a href="https://www.linkedin.com/in/jacindasoto/">here</a> to visit my LinkedIn</p>
+      <p>Click <a href = "/images/LinkedIn pfp.jpg" > here </a> for a picture of me 😄</p>
       <p>Click below to get random fun facts about me.</p>
       <button onclick="addRandomGreeting()"> ☺️</button>
-      <img src = "/images/tenor.gif" />
+      
       <div id="greeting-container"></div>
     </div>
   </body>
