--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,6 +14,7 @@
       <p>Hi everyone! My full name is Jacinda Ryzel Soto. Right now you are visiting
         my portfolio page which is kinda cool. I like to code (if that wasn't obvious), read,
         listen to music, paint, and more!</p>
+      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Here is a funny picture of me.</p>
       <img src = "/images/patrick.gif" />
       <p>Just kidding! Here is another picture of Patrick.</p>
