--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </head>
   <body>
     <div id="content">
       <h1>Jacinda's Portfolio</h1>
       <p>Welcome to my portfolio.</p>
       <img src = "/images/tenor.gif" />
+
+    <!--Button currently not connecting with url-->
+      <button onclick = "ShowSomething();">
+        Click here for a surprise! :)
+    </button>
+    <p id="servlet-container"></p>
+       
+     <!---->
+    <p>Click <a href="/hello">here</a> to see the website too.</p>
+    
       <p>Hi everyone! My full name is Jacinda Ryzel Soto. Right now you are visiting
         my portfolio page which is kinda cool. I like to code (if that wasn't obvious), read,
         listen to music, paint, and more!</p>
