Update button to fetch /hello

--- a/walkthroughs/week-2-server/examples/server-date/src/main/webapp/index.html
+++ b/walkthroughs/week-2-server/examples/server-date/src/main/webapp/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Server Date Example</title>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </head>
   <body>
     <h1>Server Date Example</h1>
