--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,8 +8,17 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Jacinda's Portfolio</h1>
+      <p>Welcome to my portfolio.</p>
+      <img src = "/images/tenor.gif" />
+      <button onclick = "getRandomThoughts();">
+        Click here for a surprise! :)
+    </button>
+    <p id="servlet2-container"></p>
+    
+      <p>Hi everyone! My full name is Jacinda Ryzel Soto. Right now you are visiting
+        my portfolio page which is kinda cool. I like to code (if that wasn't obvious), read,
+        listen to music, paint, and more!</p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
