Update JSON: Printing to website. Error in web console.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,10 +11,10 @@
       <h1>Jacinda's Portfolio</h1>
       <p>Welcome to my portfolio.</p>
       <img src = "/images/tenor.gif" />
-      <button onclick = "showSomething();">
+      <button onclick = "getRandomThoughts();">
         Click here for a surprise! :)
     </button>
-    <p id="servlet-container"></p>
+    <p id="servlet2-container"></p>
     
       <p>Hi everyone! My full name is Jacinda Ryzel Soto. Right now you are visiting
         my portfolio page which is kinda cool. I like to code (if that wasn't obvious), read,
