--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <div id="content">
       <h1>Jacinda's Portfolio</h1>
       <p>Welcome to my portfolio.</p>
-     <!-- <img src = "/images/tenor.gif" /> -->
+     <img src = "/images/tenor.gif" /> 
       <button onclick = "getRandomThoughts();">
         Click here for a surprise! :)
     </button>
@@ -29,14 +29,29 @@
       <p>Click below to get random fun facts about me.</p>
       <button onclick="addRandomGreeting()"> ☺️</button>
       <div id="greeting-container"></div>
+
+      <form action="/form-handler" method="POST">
+
+        <p>Choose contact information you want to receive:</p>
+      <label>
+        <input type="checkbox" name="contact-email" value="true">
+        Email
+      </label>
+       <label>
+        <input type="checkbox" name="contact-phone" value="true">
+        Phone Number
+      </label>
+      <label>
+        <input type="checkbox" name="contact-git" value="true">
+        Github
+      </label>
+
+        <p>Enter your email here:</p>
+        <textarea name="text-input">hello world</textarea>
+        <br/>
+        <input type="submit" />
+        </form>
     </div>
-    
-    <form action="/form-handler" method="POST">
-    <p>Enter some text here:</p>
-    <textarea name="text-input">hello world</textarea>
-    <br/>
-    <input type="submit" />
-    </form>
 
     
   </body>
